--- a/index.html
+++ b/index.html
@@ -33,14 +33,12 @@
 
  <!--Header Section-->
 
-    <div class="wrapper"><!--main container-->
-
-    	<!--<div class="container"><!--page wrapper-->
-
+    <header>
     		<nav class="navbar navbar-default"><!--navigation wrapper-->
     			<div class="container"><!--navigation container-->
     				<ul class="nav navbar-nav">
-    					<li class="active"><a href="index.html"><span class="fa fa-home fa-md"></span></a></li>
+						<li class="active"><img src="images/only-logo.png"/></li>
+    					<li><a href="index.html"><i class="fa fa-home fa-md"></i></a></li>
     					<li><a href="about.html">About Us</a></li>
     					<li><a href="services.html">Services</a></li>
     					<li><a href="#">Why Choose Us</a></li>
@@ -48,10 +46,11 @@
 
     				<ul class="nav navbar-nav pull-right">
     					<li><a href="#">Blog</a></li>
-    					<li><a href="contact.html"><span class="fa fa-envelope fa-md"></span></a></li>
+    					<li><a href="contact.html"><i class="fa fa-envelope fa-md"></i></a></li>
     				</ul>
     			</div><!--navigation container-->
     		</nav><!--navigation wrapper-->
+    	</header>
 
   <!--End of Header Section-->
 
