--- a/about.html
+++ b/about.html
@@ -76,7 +76,7 @@
 					
 					<div class="row">
 					  <div class="col-md-12">
-						<h4>Who We Are</h4>
+						<h3>Who We Are</h3>
 						<p>
 						  Talking about us is not enough, we want to know more about you! We understand one is in a foreign country,
 						  his/her voice is vital to be heard. Long-Term Exclusive Interpreting Is determined to become a leading interpreting company to
@@ -100,7 +100,7 @@
 						 
 					<div class="row">
 						<div class="col-md-6">
-							<h4>Founder</h4>
+							<h3>Founder</h3>
 							<p>
 								Joanna came to the UK 7 years ago. She could not speak English properly and felt nervous when she talked to other non-Chinese speakers in the first year in the UK.
 								After a few years studying in the UK, she found doing business was fascinating. She attended more than 50 events include tradeshows, workshops and other entrepreneur networks.
@@ -113,7 +113,7 @@
 							</p>
 						</div>
 						<div class="col-md-6">
-							<h4>Interpreting Team</h4>
+							<h3>Interpreting Team</h3>
 							<p>
 								Even though our company only launched over 1 year, we have a group of highly selected and trustworthy professionals work closely with us 
 								(yes, we met most of them from the events we attended). We know business is build on trust, we believe if we expect our interpreters, they will outstanding their performance.
@@ -131,8 +131,6 @@
 			</div><!--page-layout-->
 		 </div><!--container-->
 	  </section>
-  
-  <hr>
 
 
 <!--Footer Section -->
@@ -146,7 +144,7 @@
 							<li><a href="#"><span class="fa fa-twitter fa-2x"></span></a></li>
 							<li><a href="#"><span class="fa fa-wechat fa-2x"></span></a></li>
 							<li><a href="#"><span class="fa fa-weibo fa-2x"></span></a></li>
-							<li><a href="#">Privacy</a></li>
+							<li><a href="#">Credits</a></li>
 							<li><a href="#">Terms & Conditions</a></li>
 							<li><a href="#">Contact</a></li>
 						</ul>
@@ -157,15 +155,13 @@
 		
 		<div class="row">
 			<div class="col-md-12 text-center">
-				<p class="cp-right">&#169 LTE Interpreting Ltd 2015 &#9830 <a href="#"> Credits </a> &#9830 Made with <i class="heart"> &#9829 </i> by <a href="http://www.cubicmelon.com"> Cubic Melon Ltd</a></p>
+				<p class="cp-right">&#169 LTE Interpreting Ltd 2015 &#9830 Made with <i class="heart"> &#9829 </i> by <a href="http://www.cubicmelon.com"> Cubic Melon Ltd</a></p>
 			</div>
 		</div>
 
 	</footer>
 
 	
-
-s
 
 <!--End of Footer Section-->
 
