--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Long-term Exclusive Interpreting Ltd</title>
+    <title>World class Chinese Interpreting Service - Long-term Exclusive Interpreting Ltd</title>
 
     <!-- Bootstrap -->
 
@@ -37,8 +37,7 @@
     		<nav class="navbar navbar-default"><!--navigation wrapper-->
     			<div class="container"><!--navigation container-->
     				<ul class="nav navbar-nav">
-						<li class="active"><img src="images/only-logo.png"/></li>
-    					<li><a href="index.html"><i class="fa fa-home fa-md"></i></a></li>
+    					<li class="active"><a href="index.html"><i class="fa fa-home fa-md"></i></a></li>
     					<li><a href="about.html">About Us</a></li>
     					<li><a href="services.html">Services</a></li>
     					<li><a href="#">Why Choose Us</a></li>
@@ -62,7 +61,7 @@
     					<img class="img-responsive" src="images/logo.png" />
     				</div>
 					<div class="center-heading">
-    					<h1>UK-China Interpreting Services</h1>
+    					<h1>English-Chinese Interpreting Services</h1>
     				</div>
     		</div>
 
@@ -82,7 +81,7 @@
 							<li><a href="#"><span class="fa fa-twitter fa-2x"></span></a></li>
 							<li><a href="#"><span class="fa fa-wechat fa-2x"></span></a></li>
 							<li><a href="#"><span class="fa fa-weibo fa-2x"></span></a></li>
-							<li><a href="#">Privacy</a></li>
+							<li><a href="#">Credits</a></li>
 							<li><a href="#">Terms & Conditions</a></li>
 							<li><a href="#">Contact</a></li>
 						</ul>
@@ -93,7 +92,7 @@
 		
 		<div class="row">
 			<div class="col-md-12 text-center">
-				<p class="cp-right">&#169 LTE Interpreting Ltd 2015 &#9830 <a href="#"> Credits </a> &#9830 Made with <i class="heart"> &#9829 </i> by <a href="http://www.cubicmelon.com"> Cubic Melon Ltd</a></p>
+				<p class="cp-right">&#169 LTE Interpreting Ltd 2015 &#9830 Made with <i class="heart"> &#9829 </i> by <a href="http://www.cubicmelon.com"> Cubic Melon Ltd</a></p>
 			</div>
 		</div>
 
