--- a/template.html
+++ b/template.html
@@ -34,49 +34,42 @@
 
  <!--Header Section-->
 
-    <div class="wrapper"><!--main container-->
-
-    	<!--<div class="container"><!--page wrapper-->
-
+    <header>
     		<nav class="navbar navbar-default"><!--navigation wrapper-->
-    			<div class="container-nav"><!--navigation container-->
+    			<div class="container"><!--navigation container-->
     				<ul class="nav navbar-nav">
-    					<li><a class="active" href="index.html"><span class="fa fa-home fa-md"></span></a></li>
+						<li><img src="images/only-logo.png"/></li>
+    					<li><a href="index.html"><i class="fa fa-home fa-md"></i></a></li>
     					<li><a href="about.html">About Us</a></li>
-    					<li><a href="#">Services</a></li>
-              <li role="presentation" class="dropdown">
-    						<a class="dropdown-toggle" href="#" role="button">
-    						What's in the UK <span class="caret"></span></a>
-    					</li>
-                <ul class="dropdown-menu" role="menu">
-                  <li><a href="#"></a>Events</li>
-                  <li><a href="#">Jobs</a></li>
-                </ul>
+    					<li class="active"><a href="services.html">Services</a></li>
+    					<li><a href="#">Why Choose Us</a></li>
     				</ul>
 
     				<ul class="nav navbar-nav pull-right">
     					<li><a href="#">Blog</a></li>
-    					<li><a href="contact.html"><span class="fa fa-envelope fa-md"></span></a></li>
+    					<li><a href="contact.html"><i class="fa fa-envelope fa-md"></i></a></li>
     				</ul>
     			</div><!--navigation container-->
     		</nav><!--navigation wrapper-->
+    	</header>
 
-  <!--End of Header Section-->
+    <!--End of Header Section-->
 
   <!--Main Content Area-->
 
-    		<div class="jumbotron">
+    		<!--<div class="jumbotron">
     			<div class="container">
 
     				<h1 class="page-header">This is a template for Long term Interreting ltd</h1>
     		</div>
 
-    </div
+    </div>
 
 
 <!--Footer Section -->
 
-    <footer class="footer navbar-bottom">
+    <footer class="navbar navbar-bottom">
+    	<div class="container">
 			<div class="row">
 					<div class="col-md-12 text-center">
 						<ul class="nav navbar-nav">
@@ -84,21 +77,22 @@
 							<li><a href="#"><span class="fa fa-twitter fa-2x"></span></a></li>
 							<li><a href="#"><span class="fa fa-wechat fa-2x"></span></a></li>
 							<li><a href="#"><span class="fa fa-weibo fa-2x"></span></a></li>
-							<li><a href="#">Privacy</a></li>
+							<li><a href="#">Credits</a></li>
 							<li><a href="#">Terms & Conditions</a></li>
 							<li><a href="#">Contact</a></li>
 						</ul>
 					</div>
 
 			</div>
+		</div>
+		
+		<div class="row">
+			<div class="col-md-12 text-center">
+				<p class="cp-right">&#169 LTE Interpreting Ltd 2015 &#9830 Made with <i class="heart"> &#9829 </i> by <a href="http://www.cubicmelon.com"> Cubic Melon Ltd</a></p>
+			</div>
+		</div>
 
 	</footer>
-
-	<div class="row">
-		<div class="col-md-12 text-center">
-			<p class="cp-right">Copyright Long-Term Exclusive Interpreting 2015</p>
-		</div>
-	</div>
 
 
 
